--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -59,16 +59,22 @@
   margin-bottom: var(--mb-3);
 }
 
-.home__img {
-  /* Remove the direct background URL reference */
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: cover;
-  box-shadow: inset 0 0 0 9px rgb(255 255 255 / 30%);
+/* New container for the img element */
+.home__img-container {
   order: 2;
   justify-self: center;
   width: 370px;
   height: 370px;
+  position: relative;
+}
+
+/* Update image styling for an img element instead of background */
+.home__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+  box-shadow: inset 0 0 0 9px rgb(255 255 255 / 30%);
   animation: profile__animate 8s ease-in-out infinite;
 }
 
@@ -148,10 +154,9 @@
     margin-bottom: var(--mb-2-5);
   }
 
-  .home__img {
+  .home__img-container {
     width: 250px;
     height: 250px;
-    box-shadow: inset 0 0 0 8px rgb(255, 255, 255 / 30%);
   }
 
   .home__scroll {
@@ -166,12 +171,11 @@
     padding-top: 3.5rem;
   }
 
-  .home__img {
+  .home__img-container {
     order: initial;
     justify-self: initial;
     width: 250px;
     height: 250px;
-    box-shadow: inset 0 0 0 8px rgb(255, 255, 255 / 30%);
   }
 
   .home__data {
@@ -195,7 +199,7 @@
     height: 30px;
   }
 
-  .home__img {
+  .home__img-container {
     width: 180px;
     height: 180px;
   }
